--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "npm-run-all --parallel dev watch:sass"
   },
   "devDependencies": {
+    "node-sass": "^9.0.0",
+    "npm-run-all": "^4.1.5",
     "vite": "^5.0.8"
   }
 }
