--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
+    "watch:sass": "node-sass sass/main.scss css/style.css -w",
     "start": "npm-run-all --parallel dev watch:sass"
   },
   "devDependencies": {
